<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="157dp">
    <EditText
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="65dp"
        android:hint="@string/enter_phone_number"/>

</LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="130dp"
       >
       <Button
           android:id="@+id/add"
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:layout_margin="20dp"
           android:text="@string/add"
           tools:ignore="HardcodedText" />
       <Button
           android:id="@+id/delete"
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:layout_margin="20dp"
           android:text="@string/delete"/>
       <Button
           android:id="@+id/view"
           android:layout_width="wrap_content"
           android:layout_height="50dp"
           android:layout_margin="20dp"
           android:text="@string/view"/>
</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/to_delete_a_number_enter_the_number_and_press_on_delete_button"
        android:textAlignment="center"
        />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>